feat: api remove project
